Video template (using hardcoded values).

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,1 @@
-<iframe width="1280" height="720" frameborder="0" src="https://replay.york.ac.uk/ess/echo/presentation/d4b2e984-38de-4d97-912f-5585627b8d8e?embed=true" allowfullscreen scrolling="NO"></iframe>
+<h1>Hello, world!</h1>
