Add sign in link.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,9 +32,12 @@
           <ul class="nav navbar-nav">
             <li><a href="#">Fundamentals</a></li>
             <li><a href="#">Programs</a></li>
-            <li><a href="#about">Systems</a></li>
+            <li><a href="#">Systems</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Sign in</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
 
