Implement sign in using OmniAuth's developer strategy.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -35,7 +35,18 @@
             <li><a href="#">Systems</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Sign in</a></li>
+            <% if @user %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <%=@user[:name]%> <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                 <li><a href="#">Sign out</a></li>
+               </ul>
+              </li>
+            <% else %>
+              <li><a href="/auth/developer">Sign in</a></li>
+            <% end %>
           </ul>
         </div>
       </div>
