--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -45,7 +45,7 @@
                </ul>
               </li>
             <% else %>
-              <li><a href="/auth/developer">Sign In</a></li>
+              <li><a href="/auth/new">Sign In</a></li>
             <% end %>
           </ul>
         </div>
