--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -65,6 +65,14 @@
       </div>
     </div>
 
+    <footer>
+      <div class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+          <p class="navbar-text">Flippd v<%=@version%></p>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="/javascripts/video.js"></script>
