--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -1,7 +1,7 @@
 <h1><%= @video["title"] %></h1>
 <p class="lead"><%= @video["description"] %></p>
 
-<div id="video" data-flippd-phase="<%= @video["phase"] %>" class="embed-responsive embed-responsive-16by9">
+<div id="video" data-flippd-phase="<%= @phase["id"] %>" class="embed-responsive embed-responsive-16by9">
   <div id="player"></div>
 </div>
 
