--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -1,12 +1,22 @@
 <div class="row">
   <div class="col-xs-6 col-md-6">
     <% if @previous_video %>
-      <h5><a href="/videos/<%=@previous_video["id"]%>">&lt;&lt; <%=@previous_video["title"]%></a></h5>
+      <h5>
+        <a href="/videos/<%=@previous_video["id"]%>">
+          <span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span>
+          <%=@previous_video["title"]%>
+        </a>
+      </h5>
     <% end %>
   </div>
   <div class="col-xs-6 col-md-6" style="text-align: right;">
     <% if @next_video %>
-      <h5><a href="/videos/<%=@next_video["id"]%>"><%=@next_video["title"]%> &gt;&gt;</a></h5>
+      <h5>
+        <a href="/videos/<%=@next_video["id"]%>">
+          <%=@next_video["title"]%>
+          <span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span>
+        </a>
+      </h5>
     <% end %>
   </div>
 </div>
