Have phase pages highlight the navbar too.

--- a/app/views/phase.erb
+++ b/app/views/phase.erb
@@ -1,4 +1,4 @@
-<h1><%= @phase["title"] %></h1>
+<h1 data-flippd-phase="<%= @phase["id"]%>"><%= @phase["title"] %></h1>
 <p class="lead"><%= @phase["summary"] %></p>
 
 <div class="row">
