Fix typo in index.erb

--- a/index.erb
+++ b/index.erb
@@ -1,4 +1,4 @@
-igning and Maintaining Software</h1>
+<h1>Designing and Maintaining Software</h1>
 <p class="lead">This module teaches the theory and practice of designing maintainable software and of working with legacy systems.</p>
 
 <h3>Overview</h3>
@@ -40,5 +40,5 @@ igning and Maintaining Software</h1>
 </dl>
 
 <h3>Other resources</h3>
-<p style="padding-bottom: 2em;">The <a href="https://www-module.cs.york.ac.uk/dams.html">module website</a> contains prepatory material, the slides for the live lecture, and discusses the assessment.</p>
-
+<p style="padding-bottom: 2em;">
+The <a href="https://www-module.cs.york.ac.uk/dams.html">module website</a> contains prepatory material, the slides for the live lecture, and discusses the assessment.</p>
