Fixed incorrect use of Bootstrap's grid system

--- a/app/views/phase.erb
+++ b/app/views/phase.erb
@@ -1,8 +1,12 @@
 <h1 data-flippd-phase="<%= @phase["id"]%>"><%= @phase["title"] %></h1>
 <p class="lead"><%= @phase["summary"] %></p>
 
-<div id="topics" class="row">
+<div id="topics">
   <% @phase["topics"].each_with_index do |topic, index| %>
+  <% if index % 2 == 0 %>
+    <div class="row">
+    <% closed = false %>
+  <% end %>
   <div class="col-md-6" style="padding-top: 15px;">
     <h4><%=index+1%>. <%=topic["title"]%></h4>
 
@@ -18,5 +22,12 @@
     <% end %>
     </ul>
   </div>
+  <% if index % 2 == 1 %>
+    </div>
+    <% closed = true %>
+  <% end %>
+  <% end %>
+  <% if not closed %>
+    </div>
   <% end %>
 </div>
