Show link to quiz on phase page
Links to any quizzes for a topic will now be shown below links to videos
on the phase pages. The links don't currently go anywhere, their ID is
hardcoded to 0.

--- a/app/views/phase.erb
+++ b/app/views/phase.erb
@@ -16,6 +16,11 @@
           <a href="/videos/<%=video["id"]%>"><%=video["title"]%></a>
         </li>
     <% end %>
+    <% topic["quizzes"].each do |quiz| %>
+        <li>
+          <a href="/quizzes/<%=0%>"><%=quiz["title"]%></a>
+        </li>
+    <% end %>
     </ul>
   </div>
   <% end %>
