Add IDs to quizzes and next/prev links
Each quiz now has a unique ID using the same numbers as the unique IDs
of videos, this allows us to encode ordering in order to create next and previous links on video and quiz pages.

--- a/app/views/phase.erb
+++ b/app/views/phase.erb
@@ -18,7 +18,7 @@
     <% end %>
     <% topic["quizzes"].each do |quiz| %>
         <li>
-          <a href="/quizzes/<%=0%>"><%=quiz["title"]%></a>
+          <a href="/quizzes/<%=quiz["id"]%>"><%=quiz["title"]%></a>
         </li>
     <% end %>
     </ul>
