--- a/app/views/quiz.erb
+++ b/app/views/quiz.erb
@@ -1,49 +1,21 @@
-<h1 data-flippd-phase="<%= @phase["id"]%>">Habitability Factors</h1>
+<h1 data-flippd-phase="<%= @phase["id"]%>"><%= @quiz["title"] %></h1>
 
 <form>
-  <div class="form-group">
-    <p>Questions are likely to be fairly long, so this example text should also be long enough to show the layout of a longer question.</p>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q1" value="1">
-        Option 1
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q1" value="2">
-        Option 2
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q1" value="3">
-        Option 3
-      </label>
-    </div>
-  </div>
+  <% @quiz["questions"].each do |question| %>
+    <div class="form-group">
+      <p><%= question["question"] %></p>
 
-  <div class="form-group">
-    <p>Questions are likely to be fairly long, so this example text should also be long enough to show the layout of a longer question.</p>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q2" value="1">
-        Option 1
-      </label>
+      <% question["answers"].each do |answer| %>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q1" value="1">
+            Option 1
+          </label>
+        </div>
+      <% end %>
+
     </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q2" value="2">
-        Option 2
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q2" value="3">
-        Option 3
-      </label>
-    </div>
-  </div>
+  <% end %>
 
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
