Display question options on quiz page
The questions of a quiz now show each multiple choice option. To do this
some modification of the JSON format was required. The structure holding
the options was renamed from "answers" to "options" because it conveys
the meaning better, and each option now contains two attributes, letter
and text, rather than the key being the letters and the value the text,
which was difficult to iterate through.

--- a/app/views/quiz.erb
+++ b/app/views/quiz.erb
@@ -5,11 +5,11 @@
     <div class="form-group">
       <p><%= question["question"] %></p>
 
-      <% question["answers"].each do |answer| %>
+      <% question["options"].each_with_index do |option, question_num| %>
         <div class="radio">
           <label>
-            <input type="radio" name="q1" value="1">
-            Option 1
+            <input type="radio" name="<%= question_num %>" value="<%= option["letter"] %>">
+            <%= option["text"] %>
           </label>
         </div>
       <% end %>
