--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -65,7 +65,7 @@
           class="row panel panel-default">
         <div class="panel-body">
 
-          <% if true %>
+          <% if @user and @user.can_edit_comment(comment) %>
             <button class="btn btn-primary btn-xs pull-right"
                     onclick="
                         $('[data-comment=<%=comment.id%>]').hide();
