--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -36,18 +36,43 @@
 
     <% if @user %>
     <form action="/comment/new" method="POST">
-      <input type="hidden" name="videoId" value="<%= @video["id"] %>" />
-      Video Time:
-        <input type="number" min="0" max="59" value="0" required name="videoTimeMinutes" />m
-        <input type="number" min="0" max="59" value="0" required name="videoTimeSeconds" />s
-      <br />
-      <label for="add_text">Add a comment</label>
-      <textarea id="add_text" name="text" rows="2"
-        placeholder="Write a comment"
-        class="form-control" required></textarea>
-      <button type="submit" class="btn btn-standard btn-block">
-          Comment
-      </button>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <label for="add_text">Add a comment</label>
+          </h3>
+        </div>
+        <div class="panel-body">
+            <input type="hidden" name="videoId" value="<%= @video["id"] %>" />
+
+            <div class="input-group">
+              <span class="input-group-addon">
+                <i class="fa fa-fw fa-clock-o"></i>
+                Video time
+                <span class="text-muted">(optional)</span>
+              </span>
+              <input type="number" min="0" max="59" value="0" required
+                name="videoTimeMinutes" class="form-control" />
+              <span class="input-group-addon">minutes</span>
+              <input type="number" min="0" max="59" value="0" required
+                name="videoTimeSeconds" class="form-control" />
+              <span class="input-group-addon">seconds</span>
+            </div>
+
+            <br />
+            <textarea id="add_text" name="text" rows="2"
+              placeholder="Write a comment"
+              class="form-control" required></textarea>
+
+            <br />
+
+            <button type="submit" class="btn btn-primary btn-sm btn-block">
+                <i class="fa fa-fw fa-send"></i>
+                Comment
+            </button>
+
+        </div>
+      </div>
     </form>
 
     <% else %>
@@ -63,31 +88,76 @@
     <% @comments.each do |comment| %>
       <div id="comment-<%= comment.id %>"
           class="row panel panel-default">
+
+        <div class="panel-heading">
+          <strong><%=h comment.user.name%></strong>
+
+          <span class="pull-right">
+
+            <% if @user and @user.can_edit_comment(comment) %>
+
+              <form action="/comment/delete/<%=comment.id%>" method="POST">
+
+                <div class="btn-group btn-group-xs">
+                  <button class="btn btn-warning"
+                          onclick="
+                              $('[data-comment=<%=comment.id%>]').hide();
+                              $('[data-comment-form=<%=comment.id%>]').removeClass('hidden');
+                              return false;
+                          "
+                  >
+                    <i class="fa fa-fw fa-pencil"></i>
+                    edit this comment
+                  </button>
+                  <button class="btn btn-danger" type="submit"
+                    name="delete" value="1">
+                    <i class="fa fa-fw fa-trash"></i>
+                    delete
+                  </button>
+                </div>
+
+              </form>
+
+            <% end %>
+
+
+            <% unless comment.videoTime == 0 %>
+              <i class="fa fa-fw fa-play"></i>
+              <%= comment.video_time_display%>
+            <% end %>
+
+          </span>
+
+        </div>
         <div class="panel-body">
 
-          <% if @user and @user.can_edit_comment(comment) %>
-            <button class="btn btn-primary btn-xs pull-right"
-                    onclick="
-                        $('[data-comment=<%=comment.id%>]').hide();
-                        $('[data-comment-form=<%=comment.id%>]').removeClass('hidden');
-                    "
-            >
-              <i class="fa fa-fw fa-pencil"></i>
-              edit this comment
-            </button>
-          <% end %>
-
-          <strong><%=comment.user.name%></strong> &nbsp; <%= comment.video_time_display%>
 
           <div data-comment="<%=comment.id%>">
-            <p><%=comment.text%></p>
+            <p>
+              <% unless comment.text %>
+                <span class="text-muted" style="font-style: italic;">
+                  Comment deleted
+                </span>
+              <% end %>
+
+              <%=h comment.text%>
+            </p>
+
+            <% if comment.lastEditTime %>
+              <span class="text-muted">
+                <i class="fa fa-fw fa-pencil"></i>
+                Last edited on <%=comment.lastEditTime.strftime "%d-%m-%Y at %H:%M" %>
+                by <%=comment.lastEditUser.name%>
+              </span>
+            <% end %>
+
           </div>
 
           <form action="/comment/edit/<%=comment.id%>" method="POST"
             class="hidden" data-comment-form="<%=comment.id%>">
             <label for="new_text">Edit this comment</label>
             <textarea id="new_text" name="new_text" required rows="2"
-              class="form-control"><%=comment.text%></textarea>
+              class="form-control" maxlength="1024"><%=comment.text%></textarea>
             <button type="submit" class="btn btn-primary btn-block">
               <i class="fa fa-fw fa-pencil"></i>
               Save changes
@@ -97,19 +167,8 @@
         </div>
 
         <div class="panel-footer">
-
-          <p class="text-muted">
             <i class="fa fa-fw fa-clock-o"></i>
             Created <%= comment.commentTime.strftime "%d-%m-%Y at %H:%M"%>
-
-            <% if comment.lastEditTime %>
-              <span class="pull-right">
-                <i class="fa fa-fw fa-pencil"></i>
-                Last edited on <%=comment.lastEditTime.strftime "%d-%m-%Y at %H:%M" %>
-                by <%=comment.lastEditUser.name%>
-              </span>
-            <% end %>
-          </p>
 
         </div>
 
