Enter action and method for quiz form
Pressing the submit button on a quiz will now send a post request with
the user's provided answers encoded as parameters to /quiz_result/quiz_id,
where quiz_id is the ID of the quiz they completed.

--- a/app/views/quiz.erb
+++ b/app/views/quiz.erb
@@ -21,7 +21,7 @@
     </div>
 </div>
 <h1 data-flippd-phase="<%= @phase["id"]%>"><%= @quiz["title"] %></h1>
-<form>
+<form action="/quiz_result/<%= @quiz["id"] %>" method="post">
   <% @quiz["questions"].each do |question| %>
     <div class="form-group">
       <p><%= question["question"] %></p>
