Capture quiz inputs and post to quiz results
Simply captures selected inputs on the quiz form and POSTs to the quiz_results page, where they are displayed.

--- a/app/views/quiz.erb
+++ b/app/views/quiz.erb
@@ -29,7 +29,7 @@
       <% question["options"].each_with_index do |option, question_num| %>
         <div class="radio">
           <label>
-            <input type="radio" name="<%= question_num %>" value="<%= option["letter"] %>">
+            <input type="radio" name="post[<%= question_num %>]" value="<%= option["letter"] %>">
             <%= option["text"] %>
           </label>
         </div>
