--- a/app/views/quiz_result.erb
+++ b/app/views/quiz_result.erb
@@ -1,5 +1,9 @@
 <h1 data-flippd-phase="<%= @phase["id"]%>">Habitability Factors</h1>
 
+<div>
+    <%=@post%>
+</div>
+
 <form>
   <div class="form-group">
     <p>Questions are likely to be fairly long, so this example text should also be long enough to show the layout of a longer question.</p>
