Present score at bottom of quiz page

--- a/app/views/quiz_result.erb
+++ b/app/views/quiz_result.erb
@@ -59,12 +59,18 @@
             <% end %>
         </div>
     <% end %>
+</form>
+
+<br>
+<div>
+    <p>Score: <%=@score%> / <%=@quiz["questions"].count%></p>
+</div>
 
 
     <br>
     <br>
 
-
+<form>
     <p>Questions are likely to be fairly long, so this example text should also be long enough to show the layout of a longer question.</p>
     <div class="radio has-success">
       <label>
