--- a/app/views/quiz_result.erb
+++ b/app/views/quiz_result.erb
@@ -22,39 +22,37 @@
 </div>
 
 <h1 data-flippd-phase="<%= @phase["id"]%>"><%=@quiz["title"] %></h1>
-<div>
-    <%=@post%>
-</div>
-<br>
-<div>
-    <%=@quiz%>
-</div>
-<br>
-<div>
-    <%=@score%>
-</div>
 
 <form>
   <div class="form-group">
     <% @quiz["questions"].each_with_index do |question, question_num| %>
         <div class="form-group">
             <p><%=question["question"]%></p>
-
             <% question["options"].each do |option| %>
                 <% describedby = nil %>
-                <% if @post["question_num"] == option["letter"] %>
+                <% selected = false %>
+                <% if @post[question_num.to_s] == option["letter"] %>
+                    <% selected = true %>
                     <% if (option["letter"] == question["correct answer"]) %>
                         <div class="radio has-success">
+                        <% describedby = "correct_answer" %>
                     <% else %>
                         <div class="radio has-error">
+                        <% describedby = "wrong_answer" %>
                     <% end %>
                 <% else %>
                     <div class="radio">
                 <% end %>
                         <label>
-                            <input type="radio" name="<%question_num %>" value="<%= option["letter"] %>">
+                            <input type="radio" name="<%=question_num %>" disabled <%=selected ? "checked" : ""%>
+                                   value="<%=option["letter"] %> aria-describedby="<%=question_num%>_answer">
                             <%=option["text"]%>
                         </label>
+                        <% if describedby %>
+                            <span id="<%=question_num%>_<%=describedby%>" class="help-block">
+                                <%=question["reason"]%>
+                            </span>
+                        <% end %>
                     </div>
             <% end %>
         </div>
@@ -66,56 +64,3 @@
     <p>Score: <%=@score%> / <%=@quiz["questions"].count%></p>
 </div>
 
-
-    <br>
-    <br>
-
-<form>
-    <p>Questions are likely to be fairly long, so this example text should also be long enough to show the layout of a longer question.</p>
-    <div class="radio has-success">
-      <label>
-        <input type="radio" name="q1" value="1" aria-describedby="q1_correct_answer">
-        Option 1
-      </label>
-      <span id="q1_correct_answer" class="help-block">This is the correct answer because...</span>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q1" value="2">
-        Option 2
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q1" value="3">
-        Option 3
-      </label>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <p>Questions are likely to be fairly long, so this example text should also be long enough to show the layout of a longer question.</p>
-    <div class="radio has-error">
-      <label>
-        <input type="radio" name="q2" value="1" aria-describedby="q2_wrong_answer">
-        Option 1
-      </label>
-      <span id="q2_wrong_answer" class="help-block">This is incorrect because...</span>
-    </div>
-    <div class="radio has-success">
-      <label>
-        <input type="radio" name="q2" value="2" aria-describedby="q2_correct_answer">
-        Option 1
-      </label>
-      <span id="q2_correct_answer" class="help-block">This is the correct answer because...</span>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="q2" value="3">
-        Option 3
-      </label>
-    </div>
-  </div>
-
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
