--- a/app/views/quiz_result.erb
+++ b/app/views/quiz_result.erb
@@ -31,36 +31,41 @@
             <% question["options"].each do |option| %>
                 <% describedby = nil %>
                 <% selected = false %>
+                
                 <% if @post[question_num.to_s] == option["letter"] %>
                     <% selected = true %>
-                    <% if (option["letter"] == question["correct answer"]) %>
-                        <div class="radio has-success">
-                        <% describedby = "correct_answer" %>
-                    <% else %>
-                        <div class="radio has-error">
-                        <% describedby = "wrong_answer" %>
-                    <% end %>
+                <% end %>
+                <% if (option["letter"] == question["correct answer"]) %>
+                    <div class="radio has-success">
+                    <% describedby = "correct_answer" %>
+                <% elsif selected %>
+                    <div class="radio has-error">
+                    <% describedby = "wrong_answer" %>
                 <% else %>
                     <div class="radio">
                 <% end %>
-                        <label>
-                            <input type="radio" name="<%=question_num %>" disabled <%=selected ? "checked" : ""%>
-                                   value="<%=option["letter"] %> aria-describedby="<%=question_num%>_answer">
-                            <%=option["text"]%>
-                        </label>
-                        <% if describedby %>
+
+                     <label>
+                         <input type="radio" name="<%=question_num %>" disabled <%=selected ? "checked" : ""%>
+                             value="<%=option["letter"] %> aria-describedby="<%=question_num%>_answer">
+                         <%=option["text"]%>
+                     </label>
+                     <% if describedby == "correct_answer"%>
+                         <span class="glyphicon glyphicon-ok"></span>
                             <span id="<%=question_num%>_<%=describedby%>" class="help-block">
-                                <%=question["reason"]%>
+                                 <%=question["reason"]%>
                             </span>
-                        <% end %>
+                     <% elsif describedby == "wrong_answer"%>
+                        <span id="<%question_num%>_<%=describedby%>" class="glyphicon glyphicon-remove">
+                        </span>
+                     <% end %>
                     </div>
             <% end %>
         </div>
     <% end %>
 </form>
 
-<br>
 <div>
-    <p>Score: <%=@score%> / <%=@quiz["questions"].count%></p>
+    <h1> Score: <%=@score%> / <%=@quiz["questions"].count%></h1>
 </div>
 
