Pull score right and resize.
Put the score on the right to draw the eye through the quiz from the header.
Shrink score from h1 to h2 so it doesn't fight with the header for your eyes.

--- a/app/views/quiz_result.erb
+++ b/app/views/quiz_result.erb
@@ -66,6 +66,6 @@
 </form>
 
 <div>
-    <h1> Score: <%=@score%> / <%=@quiz["questions"].count%></h1>
+    <h2 class="pull-right"> Score: <%=@score%> / <%=@quiz["questions"].count%></h2>
 </div>
 
