--- a/app/views/quiz.erb
+++ b/app/views/quiz.erb
@@ -21,7 +21,7 @@
     </div>
 </div>
 <h1 data-flippd-phase="<%= @phase["id"]%>"><%= @quiz["title"] %></h1>
-<form action="/quiz_result/<%= @quiz["id"] %>" method="post">
+<form action="/quizzes/<%= @quiz["id"] %>" method="post">
   <% @quiz["questions"].each_with_index do |question, question_num| %>
     <div class="form-group">
       <p><%= question["question"] %></p>
