--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -2,7 +2,7 @@
   <div class="col-xs-6 col-md-6">
     <% if @previous %>
       <h5>
-        <a href="/<%=@previous["type"]%>/<%=@previous["id"]%>">
+        <a href="/<%=@previous["type"]%>/<%=@previous["pos"]%>">
           <span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span>
           <%=@previous["title"]%>
         </a>
@@ -12,7 +12,7 @@
   <div class="col-xs-6 col-md-6" style="text-align: right;">
     <% if @next %>
       <h5>
-        <a href="/<%=@next["type"]%>/<%=@next["id"]%>">
+        <a href="/<%=@next["type"]%>/<%=@next["pos"]%>">
           <%=@next["title"]%>
           <span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span>
         </a>
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<h1 data-flippd-phase="<%= @phase["id"]%>"><%= @video["title"] %></h1>
+<h1 data-flippd-phase="<%= @phase["pos"]%>"><%= @video["title"] %></h1>
 <p class="lead"><%= @video["description"] %></p>
 
 <div id="video" class="embed-responsive embed-responsive-16by9">
