--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -87,7 +87,19 @@
       {
       	//Set the checkbox as disabled so we can't change it
       	$(checkbox).attr("disabled", true);
-      	alert(data);
+      	
+      	if (data == 1)
+      	{
+      		alert("You have earned 1 new badge");
+      	}
+      	else if (data > 1)
+      	{
+      		alert("You have earned " + data + " new badges");
+      	}
+      	else
+      	{
+      		//Do nothing
+      	}
       }
     })
   }
