--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -51,6 +51,12 @@
         </div>
       </div>
     </nav>
+    
+    <% if @user %>
+		<div id="notification" class="notification">
+			<%= erb :notification_alert %>
+		</div>
+    <% end %>
 
     <div class="container">
       <div class="row">
