Add page showing a user's earnt badges, accessible under the user dropdown on the right of the navbar.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -41,6 +41,7 @@
                   <%=@user[:email]%> <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
+                  <li><a href="/badges/my_badges">My Badges</a></li>
                   <li><a href="/auth/destroy">Sign Out</a></li>
                </ul>
               </li>
