--- a/app/views/video.erb
+++ b/app/views/video.erb
@@ -28,6 +28,26 @@
   <div id="player"></div>
 </div>
 
+<div id="comments-section" class="row" style="margin-top: 1.5em;">
+  <div class="col-xs-12 col-md-12">
+    <h4>Comments</h4>
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+        Comments go here.
+      </div>
+    </div>
+
+    <form method="post" action="/post_comment/<%=@video["title"]%>">
+      <div class="form-group">
+        <label for="comment-textarea">Add a comment</label>
+        <textarea class="form-control" name="body" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+  </div>
+</div>
+
 <% if @video["resources"] %>
 <div id="resources" class="row" style="margin-top: 1.5em;">
   <div class="col-xs-6 col-md-6">
